[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://PracticeEditTextButton.gd" type="Script" id=5]
[ext_resource path="res://assets/editIconButton.png" type="Texture" id=6]

[node name="PracticeEditTextButton" type="MarginContainer"]
margin_right = 208.0
margin_bottom = 44.0
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 208.0
margin_bottom = 44.0
custom_constants/separation = 8

[node name="Button" type="ToolButton" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.698039 )
margin_right = 32.0
margin_bottom = 44.0
icon = ExtResource( 6 )
icon_align = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 40.0
margin_top = 12.0
margin_right = 110.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Modified"

[connection signal="focus_entered" from="HBoxContainer/Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Button" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
